# OKAD

./: .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.sh  pyproject.toml
.claude/commands/: okad.md
.claude/skills/okad/: SKILL.md
.cursor/rules/: commit-author.mdc
.githooks/: commit-msg  prepare-commit-msg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: DESIGN.md  FAQ.md  PHILOSOPHY.md  README.md  VISION.md  agents.md  architecture.md  comparison-graphify.md  getting-started.md  schema.md
examples/: README.md  sample-story.json
examples/mini-shop/: README.md  app.py  story.draft.json
examples/mini-shop/models/: order.py
examples/mini-shop/services/: orders.py
skill/: SKILL.md
src/okad/: __init__.py  cli.py  detect.py  extract.py  install.py  merge.py  model.py  query.py  report.py  viz.py
src/okad/_skill/: SKILL.md
src/okad/templates/: story.html
tests/: test_smoke.py  test_viewer.py
