[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okad"
version = "0.4.0"
description = "Story-driven architecture maps for any codebase — UX journeys, request paths, and data flows as readable trees and graphs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Abmstpha", email = "21007@esp.mr" },
]
keywords = [
  "architecture",
  "knowledge-graph",
  "data-flow",
  "request-flow",
  "ux-journey",
  "claude-code",
  "codex",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "networkx>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
okad = "okad.cli:app"

[project.urls]
Homepage = "https://github.com/Abmstpha/OKAD"
Repository = "https://github.com/Abmstpha/OKAD"
Issues = "https://github.com/Abmstpha/OKAD/issues"
Changelog = "https://github.com/Abmstpha/OKAD/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Abmstpha/OKAD/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/okad"]

[tool.hatch.build.targets.sdist]
include = [
  "src/okad",
  "skill",
  "docs",
  "examples",
  "tests",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel.force-include]
"src/okad/templates" = "okad/templates"
